# PaiGram

./: .deepsource.toml  .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  .gitmodules  .gitpod.yml  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  ci.py  config.py  docker-compose.gen.yml  handler.py  logger.py  main.py  manager.py  pyproject.toml  requirements.txt  run.py  update.sh
 .github/ workflows/: python-app.yml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ workflows/: test.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  new-feature.yaml  报告bug.md  请求新特性.md
.github/workflows/: docker.yml  integration-test.yaml.yml  integration-test.yml  poetry.yml  python-app.txt  python-app.yml  test.yml
.gitpod/: README.md  docker-compose.gen.yml  env.env
alembic/: README.md  env.py
alembic/versions/: 1220c5c80757_gacha_log_rank.py  1df05b897d3f_tasks.py  27aaa52f9d4a_groups.py  369fb74daad9_groups_ignore.py  70683565a977_channel_alias.py  87c6195e5306_history_data.py  89dcb9109475_tasks_daily.py  9e9a36470cd5_init.py  a1c10da5704b_devices.py  a9c8cde17cd8_tasks_player_id.py  c6282bc5bf67_devices_valid.py  cb37027ecae8_channel_alias.py  ddcfba3c7d5c_v4.py
app/: exception.py
app/admin/: __init__.py  cache.py  models.py  repositories.py  service.py
app/cookies/: __init__.py  error.py  models.py  repositories.py  service.py
app/game/: __init__.py  service.py
app/quiz/: base.py  cache.py  models.py  repositories.py  service.py
app/template/: __init__.py  service.py
app/user/: __init__.py  models.py  repositories.py  services.py
app/wiki/: __init__.py  cache.py  service.py
apps/admin/: __init__.py  repositories.py  services.py
apps/cookies/: __init__.py  cache.py  repositories.py  services.py
apps/game/: __init__.py  services.py
apps/quiz/: base.py  cache.py  models.py  repositories.py  services.py
apps/sign/: __init__.py  models.py  repositories.py  services.py
apps/template/: __init__.py
apps/user/: __init__.py  models.py  repositories.py
apps/wiki/: __init__.py  services.py
config/: config.json.example
config/sql/: paimon.sql  tgpaimonbot.sql
core/: README.md  app.py  application.py  base_service.py  basemodel.py  baseplugin.py  bot.py  config.py  dispatcher.py  error.py  event.py  execute.py  executor.py  helpers.py  manager.py  plugin.py  ratelimiter.py  service.py
core/admin/: __init__.py  cache.py  models.py  repositories.py  services.py
core/assets/: __init__.py  errors.py  service.py
core/base/: aiobrowser.py  assets.py  mtproto.py  mysql.py  redisdb.py  webserver.py
core/builtins/: __init__.py  contexts.py  dispatcher.py  executor.py  reloader.py
core/cookies/: __init__.py  cache.py  error.py  models.py  repositories.py  services.py
core/dependence/: __init__.py  aiobrowser.py  aiobrowser.pyi  assets.py  assets.pyi  database.py  mtproto.py  mtproto.pyi  mysql.py  redisdb.py  webserver.py
core/game/: __init__.py  cache.py  services.py
core/handler/: adminhandler.py  callbackqueryhandler.py  grouphandler.py  hookhandler.py  limiterhandler.py
core/override/: telegram.py
core/plugin/: __init__.py  _funcs.py  _handler.py  _job.py  _plugin.py
core/quiz/: __init__.py  base.py  cache.py  models.py  repositories.py  services.py
core/search/: __init__.py  models.py  services.py
core/sign/: __init__.py  models.py  repositories.py  services.py
core/sqlmodel/: session.py
core/template/: README.md  __init__.py  cache.py  error.py  models.py  services.py
core/user/: __init__.py  error.py  models.py  repositories.py  services.py
core/wiki/: __init__.py  cache.py  services.py
docs/: README_ZH.md
docs/wsl/: EN.md  README.md  ZH.md  en.md
jobs/: README.md  base.py  public_cookies.py  sign.py
metadata/: README.md  characters.json  dailytalents.json  damage.json  elements.json  gachaevents.json  genshin.py  honey.py  metadata.py  post_tags.py  shortname.py  weapons.json  weapontypes.json
metadata/data/: honey.json
metadata/pool/: pool.py  pool_100.py  pool_1000.py  pool_200.py  pool_2000.py  pool_301.py  pool_302.py  pool_500.py
metadata/scripts/: __init__.py  _honey.py  ambr.py  honey.py  metadata.py  metadatas.py  paimon_moe.py
model/: README.md  artifact.py  base.py  baseobject.py  helpers.py  random.py  types.py
model/apihelper/: __init__.py  artifact.py  base.py  gacha.py  helpers.py  hoyolab.py  hyperion.py  playercards.py
model/gacha/: banner.py
model/game/: artifact.py  character.py  fetter.py  skill.py  talent.py  weapon.py
model/genshinhelper/: __init__.py  base.py  gacha.py  hoyolab.py  mihoyo.py
model/wiki/: characters.py  helpers.py  item.py  weapons.py
models/: README.md  base.py  baseobject.py  types.py
models/apihelper/: artifact.py  gacha.py  hoyolab.py  hyperion.py  playercards.py
models/gacha/: banner.py  common.py  manager.py
models/game/: artifact.py  character.py  fetter.py  skill.py  talent.py  weapon.py
models/wiki/: base.py  character.py  characters.py  other.py  (+3 more)
modules/: README.md  base.py  baseobject.py
plugins/: README.md  abyss.py  adduser.py  admin.py  artifact_rate.py  auth.py  base.py  cookies.py  daily_note.py  errorhandler.py  gacha.py  get_user.py  help.py  inline.py  job_queue.py  ledger.py  map.py  player_cards.py  pokedex.py  post.py  quiz.py  sign.py  start.py  strategy.py  uid.py  weapon.py  wiki.py
resources/: README.md
service/: README.md  __init__.py  admin.py  aiobrowser.py  artifact_rate.py  base.py  cache.py  gacha.py  game.py  map.py  mysql.py  quiz.py  redisdb.py  repository.py  template.py  user.py  wiki.py  wish.py
test/: run.py
tests/: test_abyss_team_data.py  test_artifact.py  test_game.py  test_hyperion_bbs.py  test_wiki.py
tools/: init.py  update_pool.py
utils/: __init__.py  aiobrowser.py  base.py  baseobject.py  bot.py  chatmember.py  const.py  decorator.py  enkanetwork.py  enums.py  error.py  genshin.py  helpers.py  manager.py  mysql.py  queue.py  queues.py  random.py  redisdb.py  reload.py  storage.py  track.py  typed.py  typedefs.py  uid.py
(+534 files in other folders)
