[tool.poetry]
name = "PaiGram"
version = "0.4.0"
description = "Telegarm robot, query the official genshin information."
authors = ["洛水居室", "zhxy-CN", "Chuangbo Li", "kotoriのねこ", "omg-xtao", "艾迪", "Karako", "SiHuaN"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.24.0"
ujson = "^5.8.0"
Jinja2 = "^3.1.2"
python-telegram-bot = { version = "^20.5", extras = ["ext", "rate-limiter"] }
sqlmodel = "^0.0.12"
colorlog = "^6.7.0"
fakeredis = "^2.19.0"
redis = "^5.0.1"
beautifulsoup4 = "^4.12.1"
asyncmy = "^0.2.7"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.0"
alembic = "^1.12.0"
black = "^23.9.1"
rich = "^13.6.0"
enkanetwork-py = { git = "https://github.com/mrwan200/EnkaNetwork.py" }
TgCrypto = { version = "^1.2.5", optional = true }
Pyrogram = { version = "^2.0.102", optional = true }
pytest = { version = "^7.3.0", optional = true }
pytest-asyncio = { version = "^0.21.0", optional = true }
flaky = { version = "^3.7.0", optional = true }
lxml = "^4.9.2"
arko-wrapper = "^0.2.8"
fastapi = "<0.100.0"
uvicorn = { extras = ["standard"], version = "^0.24.0" }
sentry-sdk = "^1.31.0"
GitPython = "^3.1.30"
openpyxl = "^3.1.1"
async-lru = "^2.0.4"
thefuzz = "^0.20.0"
qrcode = "^7.4.2"
cryptography = "^41.0.4"
pillow = "^10.0.1"
playwright = "^1.28.0"
aiosqlite = { extras = ["sqlite"], version = "^0.19.0" }
simnet = { git = "https://github.com/PaiGramTeam/SIMNet" }
gcsim-pypi = "^2.8.2.10"

[tool.poetry.extras]
pyro = ["Pyrogram", "TgCrypto"]
test = ["pytest", "pytest-asyncio", "flaky"]
sqlite = ["aiosqlite"]
all = ["pytest", "pytest-asyncio", "flaky", "Pyrogram", "TgCrypto", "aiosqlite"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pytest配置
[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# 格式配置
[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ['py311']
